force-app/main/default/objects/Agency_Information__c/Agency_Information__c.object-meta.xml
<CustomObject>
    <label>Agency Information</label>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>