force-app/main/default/objects/Agency_Information__c/fields/Abatement_Address__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Abatement Address</label>
    <type>TextArea</type>
</CustomField>