force-app/main/default/objects/Agency_Information__c/fields/Add_Link_To_Internal_Process_Doc_Folder__c.field-meta.xml
<CustomField>
    <fullName>Add_Link_To_Internal_Process_Doc_Folder__c</fullName>
    <label>Add link to internal process doc/folder</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>