force-app/main/default/objects/Agency_Information__c/fields/AFR_Agency_Instructions_for_Bulk_Filer__c.field-meta.xml
<CustomField>
    <fullName>AFR_Agency_Instructions_for_Bulk_Filer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Instructions for Bulk Filer Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>