force-app/main/default/objects/Agency_Information__c/fields/AFR_Agency_Links_to_Amendment_Forms__c.field-meta.xml
<CustomField>
    <fullName>AFR_Agency_Links_to_Amendment_Forms__c</fullName>
    <label>Agency Link(s) to Amendment Forms</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>