force-app/main/default/objects/Agency_Information__c/fields/AFR_Current_Filing_Specs_Add_GDL__c.field-meta.xml
<CustomField>
    <fullName>AFR_Current_Filing_Specs_Add_GDL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Filing Specs (Add gDrive link)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>