force-app/main/default/objects/Agency_Information__c/fields/AFR_Efile_Mandate_Agency_Link__c.field-meta.xml
<CustomField>
    <fullName>AFR_Efile_Mandate_Agency_Link__c</fullName>
    <label>Efile Mandate agency link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>