force-app/main/default/objects/Agency_Information__c/fields/AFR_EIN_Amendments_Instructions__c.field-meta.xml
<CustomField>
    <fullName>AFR_EIN_Amendments_Instructions__c</fullName>
    <label>EIN amendments instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>