force-app/main/default/objects/Agency_Information__c/fields/AFR_File_Size_Limitation_Notes__c.field-meta.xml
<CustomField>
    <fullName>AFR_File_Size_Limitation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Size Limitation notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>