force-app/main/default/objects/Agency_Information__c/fields/AFR_How_Far_Back_Can_You_Amend__c.field-meta.xml
<CustomField>
    <fullName>AFR_How_Far_Back_Can_You_Amend__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How far back can you amend?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>