force-app/main/default/objects/Agency_Information__c/fields/AFR_Minimum_Tax_Change_Reqd_For_Amendmen__c.field-meta.xml
<CustomField>
    <fullName>AFR_Minimum_Tax_Change_Reqd_For_Amendmen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Minimum tax change required for amendmen</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>