force-app/main/default/objects/Agency_Information__c/fields/Agency_Rep__c.field-meta.xml
<CustomField>
    <fullName>Agency_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TaxRes and TaxOps uses to assign types of cases to Agency assigned Reps</description>
    <label>Agency Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agency_Information</relationshipName>
    <type>Lookup</type>
</CustomField>