force-app/main/default/objects/Agency_Information__c/fields/Agency_Slug__c.field-meta.xml
<CustomField>
    <fullName>Agency_Slug__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Slug</label>
    <length>30</length>
    <type>Text</type>
</CustomField>