force-app/main/default/objects/Agency_Information__c/fields/Amendment_Form_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Form_Name_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amendment Form Name &amp; Number</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>