force-app/main/default/objects/Agency_Information__c/fields/ATP_Can_We_Confirm_Deposit_Schedules__c.field-meta.xml
<CustomField>
    <fullName>ATP_Can_We_Confirm_Deposit_Schedules__c</fullName>
    <label>Can we confirm deposit schedules?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>