force-app/main/default/objects/Agency_Information__c/fields/ATP_FAQ_URL__c.field-meta.xml
<CustomField>
    <fullName>ATP_FAQ_URL__c</fullName>
    <label>FAQ URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>