force-app/main/default/objects/Agency_Information__c/fields/ATP_Tax_Professionals_URL__c.field-meta.xml
<CustomField>
    <fullName>ATP_Tax_Professionals_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Professionals URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>