force-app/main/default/objects/Agency_Information__c/fields/CAF_Additional_Amendment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>CAF_Additional_Amendment_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Amendment Requirements</label>
    <type>Checkbox</type>
</CustomField>