force-app/main/default/objects/Agency_Information__c/fields/CAF_Efile_Mandate__c.field-meta.xml
<CustomField>
    <fullName>CAF_Efile_Mandate__c</fullName>
    <label>Efile Mandate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>