force-app/main/default/objects/Agency_Information__c/fields/CAF_Min_Tax_Change_Required_For_Amendmen__c.field-meta.xml
<CustomField>
    <fullName>CAF_Min_Tax_Change_Required_For_Amendmen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Minimum Tax Change Required For Amendmen</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>