force-app/main/default/objects/Agency_Information__c/fields/CAF_Refund_Timeline_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>CAF_Refund_Timeline_Restrictions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Timeline Restrictions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>