force-app/main/default/objects/Agency_Information__c/fields/CAI_Re_Prior_Periods_Where_Amendments_Go__c.field-meta.xml
<CustomField>
    <fullName>CAI_Re_Prior_Periods_Where_Amendments_Go__c</fullName>
    <label>Re Prior Periods-Where Do Amendments Go?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>to new collector</fullName>
            </value>
            <value>
                <fullName>to prior collector</fullName>
            </value>
            <value>
                <fullName>to prior agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>