force-app/main/default/objects/Agency_Information__c/fields/CFW_Agency_Link_To_W_2c_Specs__c.field-meta.xml
<CustomField>
    <fullName>CFW_Agency_Link_To_W_2c_Specs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Link To W-2c Specs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>