force-app/main/default/objects/Agency_Information__c/fields/CFW_Is_W_2_Reporting_Required__c.field-meta.xml
<CustomField>
    <fullName>CFW_Is_W_2_Reporting_Required__c</fullName>
    <label>Is W-2 Reporting Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>