force-app/main/default/objects/Agency_Information__c/fields/CFW_Locality_Name_Abbreviation_On_W_2__c.field-meta.xml
<CustomField>
    <fullName>CFW_Locality_Name_Abbreviation_On_W_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locality Name Abbreviation On W-2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>