force-app/main/default/objects/Agency_Information__c/fields/CFW_Paper_Filing_Notes__c.field-meta.xml
<CustomField>
    <fullName>CFW_Paper_Filing_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paper Filing Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>