force-app/main/default/objects/Agency_Information__c/fields/CFW_W_2_Annual_Filing_Notes__c.field-meta.xml
<CustomField>
    <fullName>CFW_W_2_Annual_Filing_Notes__c</fullName>
    <label>W-2 Annual Filing Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>