force-app/main/default/objects/Agency_Information__c/fields/Clean_File_Required__c.field-meta.xml
<CustomField>
    <fullName>Clean_File_Required__c</fullName>
    <label>Clean file required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>