force-app/main/default/objects/Agency_Information__c/fields/CRAF_Amendment_Filing_Behavior__c.field-meta.xml
<CustomField>
    <fullName>CRAF_Amendment_Filing_Behavior__c</fullName>
    <label>Amendment Filing Behavior</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only report changes</fullName>
            </value>
            <value>
                <fullName>Amendment replaces original (include all EEs changed and not-changed)</fullName>
            </value>
            <value>
                <fullName>If wages are increasing, send supplemental return</fullName>
            </value>
            <value>
                <fullName>If wages are decreasing, send correction-page(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>