force-app/main/default/objects/Agency_Information__c/fields/CRAF_File_Encryption_Requirements__c.field-meta.xml
<CustomField>
    <fullName>CRAF_File_Encryption_Requirements__c</fullName>
    <label>File Encryption Requirements?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>