force-app/main/default/objects/Agency_Information__c/fields/CRAF_Form_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>CRAF_Form_Name_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Name &amp; Number</label>
    <type>Checkbox</type>
</CustomField>