force-app/main/default/objects/Agency_Information__c/fields/CRNF_Agency_Link_to_Amendment_Specs__c.field-meta.xml
<CustomField>
    <fullName>CRNF_Agency_Link_to_Amendment_Specs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Link to Amendment Specs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>