force-app/main/default/objects/Agency_Information__c/fields/CRNF_File_size_limitations__c.field-meta.xml
<CustomField>
    <fullName>CRNF_File_size_limitations__c</fullName>
    <label>File size limitations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>