force-app/main/default/objects/Agency_Information__c/fields/Deposit_Info_Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Info_Additional_Requirements__c</fullName>
    <label>Additional Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>