force-app/main/default/objects/Agency_Information__c/fields/Does_ACH_Credit_TXP_Count_As_The_Filing__c.field-meta.xml
<CustomField>
    <fullName>Does_ACH_Credit_TXP_Count_As_The_Filing__c</fullName>
    <label>Does ACH Credit TXP count as the filing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>