force-app/main/default/objects/Agency_Information__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Agency Email Address(es)</label>
    <type>Email</type>
</CustomField>