force-app/main/default/objects/Agency_Information__c/fields/Employer_Portal_Registration_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Employer_Portal_Registration_Instruction__c</fullName>
    <label>Employer portal registration instruction</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>