force-app/main/default/objects/Agency_Information__c/fields/ETR_Specifications_For_Forms__c.field-meta.xml
<CustomField>
    <fullName>ETR_Specifications_For_Forms__c</fullName>
    <label>Specifications For Forms</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>