force-app/main/default/objects/Agency_Information__c/fields/F1099_NEC_Agency_Instructions_for_Bulk__c.field-meta.xml
<CustomField>
    <fullName>F1099_NEC_Agency_Instructions_for_Bulk__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Instructions for Bulk Filer Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>