force-app/main/default/objects/Agency_Information__c/fields/F1099_NEC_File_Naming_Requirements__c.field-meta.xml
<CustomField>
    <fullName>F1099_NEC_File_Naming_Requirements__c</fullName>
    <label>File naming requirements?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>