force-app/main/default/objects/Agency_Information__c/fields/Final_Pay_Reqs_If_EE_Left_Voluntarily__c.field-meta.xml
<CustomField>
    <fullName>Final_Pay_Reqs_If_EE_Left_Voluntarily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Pay Reqs if EE left voluntarily</label>
    <type>Checkbox</type>
</CustomField>