force-app/main/default/objects/Agency_Information__c/fields/FPRIV_Paying_Out_Unused_PTO_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FPRIV_Paying_Out_Unused_PTO_Requirements__c</fullName>
    <label>Paying out unused PTO requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>