force-app/main/default/objects/Agency_Information__c/fields/FPRV_Other_Final_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FPRV_Other_Final_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other final requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>