force-app/main/default/objects/Agency_Information__c/fields/FW2_Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FW2_Additional_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>