force-app/main/default/objects/Agency_Information__c/fields/FW2_Does_The_Agency_Allow_0_W_2s__c.field-meta.xml
<CustomField>
    <fullName>FW2_Does_The_Agency_Allow_0_W_2s__c</fullName>
    <label>Does the agency allow $0 W-2s?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>