force-app/main/default/objects/Agency_Information__c/fields/FW2_Is_the_W_2_the_Annual_Filing__c.field-meta.xml
<CustomField>
    <fullName>FW2_Is_the_W_2_the_Annual_Filing__c</fullName>
    <label>Is the W-2 the Annual Filing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>