force-app/main/default/objects/Agency_Information__c/fields/FW2_Rejection_Criteria_ER_EE__c.field-meta.xml
<CustomField>
    <fullName>FW2_Rejection_Criteria_ER_EE__c</fullName>
    <label>Rejection Criteria (ER/EE)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>