force-app/main/default/objects/Agency_Information__c/fields/FW2_W_2_Annual_Filing_notes__c.field-meta.xml
<CustomField>
    <fullName>FW2_W_2_Annual_Filing_notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>W-2 Annual Filing notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>