force-app/main/default/objects/Agency_Information__c/fields/GPFML_PFML_Voluntary_Coverage__c.field-meta.xml
<CustomField>
    <fullName>GPFML_PFML_Voluntary_Coverage__c</fullName>
    <label>PFML Voluntary Coverage</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>