force-app/main/default/objects/Agency_Information__c/fields/GSUI_Maximum_SUI_Rate__c.field-meta.xml
<CustomField>
    <fullName>GSUI_Maximum_SUI_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maximum SUI Rate</label>
    <type>Checkbox</type>
</CustomField>