force-app/main/default/objects/Agency_Information__c/fields/GSUI_New_Employer_Rate__c.field-meta.xml
<CustomField>
    <fullName>GSUI_New_Employer_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Employer Rate</label>
    <type>Checkbox</type>
</CustomField>