force-app/main/default/objects/Agency_Information__c/fields/If_EE_Left_Voluntarily_Law_Notes__c.field-meta.xml
<CustomField>
    <fullName>If_EE_Left_Voluntarily_Law_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>If EE Left Voluntarily - Law Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>