force-app/main/default/objects/Agency_Information__c/fields/Internal_Tax_Operations_Processes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Tax_Operations_Processes__c</fullName>
    <formula>HYPERLINK(&quot;https://support.gusto.com/hub/My-team/Tax-Operations-processes&quot; , &apos;Tax Operations Processes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Internal]</label>
    <type>Text</type>
</CustomField>