force-app/main/default/objects/Agency_Information__c/fields/Is_Client_Approval_Reqd_For_TPA_Access__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Approval_Reqd_For_TPA_Access__c</fullName>
    <label>Is Client approval req&apos;d for TPA access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>