force-app/main/default/objects/Agency_Information__c/fields/Is_This_A_FUTA_Credit_Reduction_State__c.field-meta.xml
<CustomField>
    <fullName>Is_This_A_FUTA_Credit_Reduction_State__c</fullName>
    <label>Is this a FUTA Credit Reduction State?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>