force-app/main/default/objects/Agency_Information__c/fields/LGAF_Form_Name_Info__c.field-meta.xml
<CustomField>
    <fullName>LGAF_Form_Name_Info__c</fullName>
    <label>Form Name &amp; Info.</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>