force-app/main/default/objects/Agency_Information__c/fields/LGAI_How_Is_the_ER_portion_calculated__c.field-meta.xml
<CustomField>
    <fullName>LGAI_How_Is_the_ER_portion_calculated__c</fullName>
    <label>How is the ER portion calculated?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>