force-app/main/default/objects/Agency_Information__c/fields/LGAI_Liability_Exemptions__c.field-meta.xml
<CustomField>
    <fullName>LGAI_Liability_Exemptions__c</fullName>
    <label>Liability Exemptions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>