force-app/main/default/objects/Agency_Information__c/fields/LGAI_Local_Tax_Calculation_Info_Notes__c.field-meta.xml
<CustomField>
    <fullName>LGAI_Local_Tax_Calculation_Info_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Tax Calculation Info Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>