force-app/main/default/objects/Agency_Information__c/fields/LGAI_Nexus_Requirements__c.field-meta.xml
<CustomField>
    <fullName>LGAI_Nexus_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nexus Requirements</label>
    <type>Checkbox</type>
</CustomField>