force-app/main/default/objects/Agency_Information__c/fields/Link_to_additional_Tax_Portal_info_formu__c.field-meta.xml
<CustomField>
    <fullName>Link_to_additional_Tax_Portal_info_formu__c</fullName>
    <formula>HYPERLINK( &quot;https://support.gusto.com/hub/My-team/Tax-Resolution-processes/Agency-info-and-LSIs&quot;, &apos;Tax Portal Info&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to additional Tax Portal info</label>
    <type>Text</type>
</CustomField>