force-app/main/default/objects/Agency_Information__c/fields/LOIR_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LOIR_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>