force-app/main/default/objects/Agency_Information__c/fields/Lookback_Period_For_Determination__c.field-meta.xml
<CustomField>
    <fullName>Lookback_Period_For_Determination__c</fullName>
    <label>Lookback Period For Determination</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>