force-app/main/default/objects/Agency_Information__c/fields/Multi_Factor_Authentication_MFA__c.field-meta.xml
<CustomField>
    <fullName>Multi_Factor_Authentication_MFA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Factor Authentication (MFA)</label>
    <type>Checkbox</type>
</CustomField>