force-app/main/default/objects/Agency_Information__c/fields/NAF_Agency_Links_To_Amendment_Forms__c.field-meta.xml
<CustomField>
    <fullName>NAF_Agency_Links_To_Amendment_Forms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Link(s) to Amendment Forms</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>