force-app/main/default/objects/Agency_Information__c/fields/NAF_Amendment_Filing_Behavior__c.field-meta.xml
<CustomField>
    <fullName>NAF_Amendment_Filing_Behavior__c</fullName>
    <label>Amendment Filing Behavior</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>only report changes</fullName>
            </value>
            <value>
                <fullName>amendment replaces original (include all EEs changed and not-changed)</fullName>
            </value>
            <value>
                <fullName>if wages are increasing, send supplemental return</fullName>
            </value>
            <value>
                <fullName>if wages are decreasing, send correction-page(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>