force-app/main/default/objects/Agency_Information__c/fields/NAF_Are_Zero_Returns_Required__c.field-meta.xml
<CustomField>
    <fullName>NAF_Are_Zero_Returns_Required__c</fullName>
    <label>Are Zero Returns Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>