force-app/main/default/objects/Agency_Information__c/fields/NAF_Does_Payment_Have_To_Match_Return__c.field-meta.xml
<CustomField>
    <fullName>NAF_Does_Payment_Have_To_Match_Return__c</fullName>
    <label>Does payment have to match return?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>