force-app/main/default/objects/Agency_Information__c/fields/NAF_Efile_Mandate_Notes__c.field-meta.xml
<CustomField>
    <fullName>NAF_Efile_Mandate_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Efile Mandate Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>