force-app/main/default/objects/Agency_Information__c/fields/NHR_How_Does_The_Agency_Define_NewHire__c.field-meta.xml
<CustomField>
    <fullName>NHR_How_Does_The_Agency_Define_NewHire__c</fullName>
    <label>How Does The Agency Define A New-Hire?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>