force-app/main/default/objects/Agency_Information__c/fields/NHRF_Filing_Method__c.field-meta.xml
<CustomField>
    <fullName>NHRF_Filing_Method__c</fullName>
    <label>Filing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fax</fullName>
            </value>
            <value>
                <fullName>mail</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>server to server (FTP)</fullName>
            </value>
            <value>
                <fullName>web upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>