force-app/main/default/objects/Agency_Information__c/fields/NHRF_Is_There_A_Rehire_Checkbox_Field__c.field-meta.xml
<CustomField>
    <fullName>NHRF_Is_There_A_Rehire_Checkbox_Field__c</fullName>
    <label>Is There A Rehire Checkbox/Field?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>