force-app/main/default/objects/Agency_Information__c/fields/Notary_Required_On_The_POA__c.field-meta.xml
<CustomField>
    <fullName>Notary_Required_On_The_POA__c</fullName>
    <label>Notary required on the POA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>