force-app/main/default/objects/Agency_Information__c/fields/Notes_Link_For_process__c.field-meta.xml
<CustomField>
    <fullName>Notes_Link_For_process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes/Link for process:</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>